@@ -184,6 +184,12 @@ describe PageObject::ElementLocators do
       element = watir_page_object.list_item_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::ListItem
     end
+
+    it "should find all list items" do
+      watir_browser.should_receive(:lis).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.list_item_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::ListItem 
+    end
     
     it "should find an unordered list" do
       watir_browser.should_receive(:ul).with(:id => 'blah').and_return(watir_browser)
@@ -423,6 +429,12 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.list_item_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::ListItem
+    end
+
+    it "should find all list items" do
+      selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+      element = selenium_page_object.list_item_elements(:id => 'blah')
+      element[0].should be_instance_of PageObject::Elements::ListItem 
     end
     
     it "should find an unordered list" do
